# database_project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mongod.conf
cmake/: CMakeLists.txt  main.cpp
datafiles/Data/Global/: MUV12ChargeEqualization.db  MultiplicityBDT_K2pi_Pnn_Jun-29-2023.root  MultiplicityBDT_K3pi_Pnn_Jun-29-2023.root  MultiplicityBDT_Ke4_Pnn_Jun-29-2023.root  SpectrometerCalorimetersAssociation_TMVA_weight_file.xml  SpectrometerCalorimetersAssociation_TMVA_weight_file_2018_v3.xml  SpectrometerCalorimetersAssociation_TMVA_weight_file_new.xml  UpstreamBDTWeights2018.xml
datafiles/Data/Overlay/: IntensityResponseMatrix.run007000_0000-run009999_9999.root  IntensityResponseMatrix.run010000_0000-run012999_9999.root
datafiles/Data/Spectrometer/: Spectrometer-DigitizerTemplate.root  Spectrometer-MagnetMNP33GDML.gdml
datafiles/MC/Beam/: BeamMomentumReweightingFunction.root
datafiles/MC/Datacards/: Datacards.mac  Datacards.run011069_0000-run011094_9999.mac  Datacards.run020000_0000-run029999_9999.mac  Datacards.run030000_0000-run039999_9999.mac  Datacards.run050000_0000-run059999_9999.mac
datafiles/MC/ExternalGenerator/: BottomMesonsProduction.root  CharmedMesonsProduction.root  LightMesonsProduction.root  ProtonDistributions.root
datafiles/MC/GigaTracker/: GigaTracker-EfficiencyTemplate.root  GigaTracker-MDXCoilGDML.gdml
datafiles/MC/LKr/: LKrPionEoPvsMomentumModel.root
datafiles/MC/Overlay/: BeamIntensityTemplate.root  BeamIntensityTemplate.run008094_0000-run008094_9999.root  BeamIntensityTemplate.run009001_0000-run009001_9999.root  BeamIntensityTemplate.run011100_0000-run011100_9999.root  BeamIntensityTemplate.run012165_0000-run012165_9999.root
datafiles/MC/RICH/: RICH-HitPositionSmearingTemplate.root  RICH-LooseHitTemplate.root
mongo/: mongod.conf
scr/: CMakeLists.txt  data_input.py  example.py  file_input_failed.txt  main.cpp  test.cpp  timing_plot.ipynb  timing_plot.py  trysearch
scr/test_build/: CMakeCache.txt  Makefile  cmake_install.cmake  db_test
templates/: delete.html  delete_result.html  insert_results.html  loginpage.html  query.html  update_results.html
(+21 files in other folders)
